--- a/State Tree Watcher.indigoPlugin/Contents/Info.plist
+++ b/State Tree Watcher.indigoPlugin/Contents/Info.plist
@@ -18,7 +18,7 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>http://example.com</string>
+			<string>https://github.com/kmarkley/Indigo-State-Tree-Watcher</string>
 		</dict>
 	</array>
 </dict>
